    discovery. (Jelmer Vernooij, #616860)

  * Support accessing branches without accessing the repository root.
    Please note that this will only work when the log cache is disabled. 
    (Jelmer Vernooij, #409668)

 PERFORMANCE

  * Support using any connection when finding UUID, revision properties
    or revision number. (Jelmer Vernooij)

bzr-svn	1.0.3					  2010-07-30

 BUG FIXES

  * Mark as compatible with Bazaar 2.2. (Martin Pool)

  * Allow more levels of parent directories for trunk layouts.
    (Jelmer Vernooij, Debian #573988, #489740)

  * Mention correct command for obtaining repository UUID.
    (Ralf Doering, #512876)

  * Support passwords specified in authentication.conf. 
    (Jelmer Vernooij, #452121)

  * Cope with CodePlex.com lowercasing the hostname in returned
    repository URLs. (Jelmer Vernooij)

  * Cope with non-ascii characters in files with svn-keywords.
    (Jelmer Vernooij, #515450)

  * Support for the KDE repository layout has been added.
    (Jelmer Vernooij, #506257)

  * Fix export in svn working copies. (Jelmer Vernooij, #524476)

  * Fix use of authentication.conf for svn+http and svn+https. 
    (Jelmer Vernooij, #532292)

  * Cope with new ordering argument to Repository.iter_inventories(). 
    (Jelmer Vernooij, #532363)

  * Fix use of svn:author=author. (Jelmer Vernooij, #527805)

  * Provide BranchConfig._get_change_editor(). 
    (Jelmer Vernooij, #530130)

  * Simplify handling of text parents. (Jelmer Vernooij)

  * Implement Repository.get_known_revision_graph(). (Jelmer Vernooij)

  * Cope with local repository that can not be opened. (Jelmer Vernooij,
      #463020)

  * Don't rely on old revision being on the mainline after push. 
    (Jelmer Vernooij, #522836)

  * Support + signs in URLs. (Jelmer Vernooij, #552868)

  * Always detect newer tags. (Jelmer Vernooij, #504314)

  * Non-unicode characters in existing commit messages are now squashed.
    (Jelmer vernooij, #586408, #509063)
