@@ -40,6 +40,11 @@ bzr-svn 1.0.4					  UNRELEASED
   * Support using any connection when finding UUID, revision properties
     or revision number. (Jelmer Vernooij)
 
+ FEATURES
+
+  * Warn the user when they are about to push to a repository while setting
+    file properties. (Jelmer Vernooij, #589440)
+
 bzr-svn	1.0.3					  2010-07-30
 
  BUG FIXES
